@@ -1,3 +1,6 @@
+2011-04-02 Lorenzo Natale <lorenzo.natale@iit.it>
+	* main/conf/iCubFindDependencies.cmake check OpenCV version infor and detect OpenCV 2
+	
 2011-21-01 Lorenzo Natale <lorenzo.natale@iit.it>
 	* fixed various installation issues
 	* added versioning information
